# drill

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  image_proof_of_concept.rs  migrate.py  precommit.py  quiz.json  sample.json  sample.quiz  sample_quiz  sample_script  setup_tests  t
assets/: test1  test2  test2.json  test_dependency.json  test_flashcard.json  test_no_credit
design/: backwards-compatibility.md  macros.md  order-constraints.md  scratchpad.md
src/: common.rs  iohelper.rs  lib.rs  main.rs  parser.rs  persistence.rs  persistence2.rs  quiz.rs  quiz2.rs  repetition.rs  repetition2.rs  shell.rs  ui.rs  ui2.rs
tests/: e2e_tests.rs  functional_tests.rs
tests/quizzes/: last_name.py  long  russverb.py  test1  test2  test_choice_group  test_correction  test_correction_list  test_custom_script  test_flashcard  test_flashcard_context  test_flashcard_script  test_global_custom_script  test_instructions  test_list  test_tags  test_timeouts  test_unicode_normalization
tests/quizzes/parse/: test_bad_attribute  test_bad_flashcard_context  test_bad_timeout_value  test_choice_group_line_in_question  test_duplicate_choice_group_ids  test_duplicate_ids  test_field_on_wrong_question  test_missing_choice_group_answer  test_nameless_choice_group  test_no_blank_line  test_no_blank_line_after_settings  test_nonexistent_choice_group  test_nonexistent_choice_group_answer  test_unexpected_line_in_choice_group  test_unknown_field  test_unknown_global_field  test_wrong_ordered_value
tools/: migrate  migrate.py  setup_tests
(+2 files in other folders)
