[package]
name = "drill"
version = "1.0.0"
authors = ["Ian Fisher <iafisher@fastmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "1.8.0"
dirs = "1.0"
libc = "0.2"
rand = "0.6"
rustyline = "4.1.0"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
termimage = "1.1.0"
term_size = "0.3.2"
textwrap = { version = "0.11", features = ["term_size"] }
unicode-normalization = "0.1.8"

[dev-dependencies]
nix = "0.15.0"
regex = "1"
